# conductor-eval

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: test_eval.py
src/conductor_eval/: __init__.py  analysis.py  checks.py  evaluator.py  midi.py  paths.py
tests/: test_analysis.py  test_checks.py  test_conductor_eval_direct_run_guard.py  test_conductor_eval_evaluator.py  test_midi.py  test_package_boundaries.py  test_paths.py
