[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conductor-eval"
version = "0.1.0"
description = "Evaluation runner and MIDI quality checks for Conductor Core"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"conductor-core[providers,playback] @ git+https://github.com/laceyp99/conductor-core.git@v0.2.0",
	"mido==1.3.3",
	"rich>=14.0.0",
]

[project.optional-dependencies]
dashboard = [
	"dash==4.0.0",
	"dash-bootstrap-components==2.0.4",
	"pandas==2.2.3",
	"plotly==6.0.1",
]
dev = [
	"pytest>=8.3,<9",
	"ruff>=0.11,<1",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
